@@ -1,5 +1,13 @@
 2016-11-14  Ola Jeppsson  <ola@adapteva.com>
 
+	* e-hal/src/epiphany-hal.c (gdbserver_attached_p): New
+	function.
+	(_e_default_start_group): Halt cores, before sending SYNC if
+	EHAL_GDBSERVER env var is set.
+	(static int e_halt_group): New function.
+
+2016-11-14  Ola Jeppsson  <ola@adapteva.com>
+
 	* e-hal/src/epiphany-hal.c (ee_reset_regs): Reset PC.
 
 2016-11-14  Ola Jeppsson  <ola@adapteva.com>
